--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="red">#CD2626</color>
     <color name="green">#00CD00</color>
     <color name="light_white">#F8F8FF</color>
+    <color name="blue">#4876FF</color>
     
 </resources>
