--- a/res/layout/preview_player.xml
+++ b/res/layout/preview_player.xml
@@ -11,9 +11,9 @@
         layout="@layout/header" />
 
     <LinearLayout
-        android:layout_marginTop="10sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="10sp"
         android:layout_weight="1" >
 
         <FrameLayout
@@ -30,6 +30,7 @@
 
             <TextView
                 android:id="@+id/TimeStampLabel"
+                style="@style/fontStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -38,13 +39,13 @@
 
             <TextView
                 android:id="@+id/tv_pause"
-                android:layout_width="60dp"
+                style="@style/fontStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
+                android:layout_gravity="bottom|right"
                 android:gravity="center"
                 android:text="@string/curr_void_pause"
-                android:textColor="@color/red"
-                android:layout_gravity="bottom|right"
-                android:visibility="visible" />
+                android:textColor="@color/red" />
         </FrameLayout>
     </LinearLayout>
 
@@ -60,7 +61,7 @@
             android:layout_width="150sp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:src="@drawable/takphoto" />
+            android:src="@drawable/take_photo_switch" />
 
         <ImageView
             android:layout_width="15sp"
@@ -73,7 +74,7 @@
             android:layout_width="150sp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:src="@drawable/record" />
+            android:src="@drawable/record_on" />
     </LinearLayout>
 
 </LinearLayout>
