--- a/res/layout/set_mod_passwd.xml
+++ b/res/layout/set_mod_passwd.xml
@@ -20,9 +20,11 @@
         android:layout_width="300sp"
         android:layout_height="60sp"
         android:layout_gravity="center"
+        android:background="@color/bg_color"
         android:digits="1234567890"
         android:hint="@string/set_passwd_old"
-        android:inputType="textPassword|phone" />
+        android:inputType="textPassword|phone"
+        android:textColorHint="@color/white" />
 
     <EditText
         android:id="@+id/et_passwd_new_login"
@@ -30,15 +32,18 @@
         android:layout_width="300sp"
         android:layout_height="60sp"
         android:layout_gravity="center"
+        android:layout_marginTop="10sp"
+        android:background="@color/bg_color"
         android:digits="1234567890"
         android:hint="@string/set_passwd_new"
-        android:inputType="textPassword|phone" />
+        android:inputType="textPassword|phone"
+        android:textColorHint="@color/white" />
 
     <LinearLayout
-        android:layout_marginTop="10sp"
         android:layout_width="300sp"
         android:layout_height="60sp"
         android:layout_gravity="center"
+        android:layout_marginTop="10sp"
         android:gravity="center"
         android:orientation="horizontal" >
 
