--- a/res/layout/set_mod_ssid.xml
+++ b/res/layout/set_mod_ssid.xml
@@ -14,26 +14,59 @@
         android:gravity="center"
         android:text="@string/mod_wifi_ssid" />
 
-    <TextView
-        android:id="@+id/tv_mod_ssid_old"
-        style="@style/fontStyle"
-        android:layout_width="300sp"
-        android:layout_height="60sp"
-        android:paddingLeft="10sp"
-        android:layout_gravity="center"
-        android:gravity="center|left"
-        android:text="@string/set_ssid_old" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp" >
 
-    <EditText
-        android:id="@+id/et_mod_ssid_new"
-        style="@style/fontStyle"
-        android:layout_width="300sp"
-        android:layout_height="60sp"
-        android:layout_gravity="center"
-        android:digits="1234567890"
-        android:gravity="center|left"
-        android:hint="@string/set_ssid_new"
-        android:inputType="textPassword|phone" />
+        <TextView
+            style="@style/fontStyle"
+            android:layout_width="100sp"
+            android:layout_height="60sp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/ntic_old_device" />
+
+        <TextView
+            android:id="@+id/tv_mod_ssid_old"
+            style="@style/fontStyle"
+            android:layout_width="match_parent"
+            android:layout_height="60sp"
+            android:layout_gravity="center"
+            android:background="@color/bg_color"
+            android:gravity="center|left"
+            android:text="@string/set_ssid_old" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp"
+        android:layout_marginTop="10sp" >
+
+        <TextView
+            style="@style/fontStyle"
+            android:layout_width="100sp"
+            android:layout_height="60sp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/ntic_new_device" />
+
+        <EditText
+            android:id="@+id/et_mod_ssid_new"
+            style="@style/fontStyle"
+            android:layout_width="match_parent"
+            android:layout_height="60sp"
+            android:layout_gravity="center"
+            android:background="@color/bg_color"
+            android:digits="1234567890"
+            android:gravity="center|left"
+            android:hint="@string/set_ssid_new"
+            android:inputType="textPassword|phone"
+            android:textColorHint="@color/white" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="300sp"
